--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link href='https://fonts.googleapis.com/css?family=Kaushan+Script|Allura|Megrim' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" href="/css/normalize.css" >
-	<link rel="stylesheet" href="/css/styles.css" >
+	<link rel="stylesheet" href="css/normalize.css" >
+	<link rel="stylesheet" href="css/styles.css" >
 </head>
 
 <body>
