Correct src location for profile image

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 				</div> <!-- End of table shopping-list -->
 				
 				<div class="td-item-total-all">
-					<img class="trash" src="/img/x.png">
+					<img class="trash" src="img/x.png">
 					<h3>$6.98</h3>
 				</div>
 				
