Create app.js and convert form to div in index.html

--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
 			
 				<div class="list-heading">
 					<h2>Add Items To Shopping List</h2>
-					<form action="" class="add-item-form" id="add-item-form">
-						<input type="text" class='add-item-name' placeholder="Enter shopping list item" ><div class="clear"></div>
-						<input type="text" class="add-item-price" placeholder="$ price of item" >
-						<button class="add-item-button" id='add-item-button'>Add Item</button>
-					</form>
+					<div class="add-item">
+						<input type="text" class='add-item-name' placeholder="Enter shopping list item">
+						<input type="text" class="add-item-price" placeholder="$ price of item">	
+					</div>
+					<button class="add-item-button" id='add-item-button'>Add Item</button>
+					<div class="clear"></div>
 				</div>
 				
 				<div class="caption"><h2>Shopping List</h2></div>
@@ -125,28 +126,8 @@
 		</section>
 	</div>
 	</section>
+	
+	<script src="http://code.jquery.com/jquery.min.js"></script>
+	<script src="js/app.js"></script>
 </body>
 </html>
-
-
-<!--
-					<ul>
-						<form class="shopping-list-item">
-							<li>Item #xxxx</li>
-							<li>list-price</li>
-							<button class="done">done</button>
-							<button class="remove">remove</button>
-						</form>
-						<div class="shopping-list-item">
-							<li>Item #xxxx</li>
-							<li>list-price</li>
-						</div>
-						<div class="shopping-list-item">
-							<li>Item #xxxx</li>
-							<li>list-price</li>
-						</div>
-						<div class="shopping-list-item">
-							<li>Item #xxxx</li>
-							<li>list-price</li>
-						</div>
-					</ul>-->
