Clean Up CSS file and add minor visual enhancements.

--- a/index.html
+++ b/index.html
@@ -106,15 +106,14 @@
 				</div> <!-- End of table items-purchased -->
 				
 				<div class="total-spent">
-					<h3>$6.98</h3>
+					<h3 id='shopping-list-total'>$ sub-total</h3>
 				</div>
 				
 			</section>
-<!--
 			<footer>
-				<h4><a href="https://www.flickr.com/photos/56218409@N03/">Background Image by Matthias Ripp</a></h4>
+<!--				<h4><a href="https://www.flickr.com/photos/56218409@N03/">Background Image by Matthias Ripp</a></h4>				-->
+				<h4><a href="https://github.com/Nuttdguy">Shopping List by Phouthalang Pygnasak</a></h4>
 			</footer>
--->
 		</section>
 	</div>
 	</section>
