Correct Calculator functionality to work individually.

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
 <!--
 						<ul class="tr" >
 							<li class="td">
-								<input class="col-qty-input ui-state-default" value="" change="updateTotalPrice()" id="totalQty" type="number" placeholder="1" maxlength="2" >
+								<input class="col-qty-input ui-state-default totalQty " value="" change="updateTotalPrice()" type="number" placeholder="1" maxlength="2" >
 								<input class="td-item-description-input ui-state-default" type="text" maxlength="30" placeholder="Shopping list item" >
-								<input class="td-item-price-input ui-state-default" id="unitPrice" type="text" placeholder="$ 0.00" value="1" readonly="readonly" >
-								<input class="td-item-total-input ui-state-default" id="totalPrice" type="text" placeholder="$ 0.00" value="" readonly="readonly" >
+								<input class="td-item-price-input ui-state-default unitPrice" type="text" placeholder="$ 0.00" >
+								<input class="td-item-total-input ui-state-default totalPrice" type="text" placeholder="$ 0.00" >
 							</li>
 						</ul>
 -->
